# kyrs_Server

./: CMakeLists.txt  Client.py  Server.sln
Server/: Connector.cpp  Connector.hpp  DatabaseHandler.cpp  DatabaseHandler.hpp  Server.vcxproj  Server.vcxproj.filters  Session.cpp  Session.hpp  main.cpp
